@@ -102,6 +102,9 @@ MSN
 AIM, ICQ, and MobileMe
  * Added a preference to always use the AOL proxy server for file transfers and direct IM. (#11413)
  * Added a preference to use SSL for connections. (#9553) You can get information on the certificate by right-clicking the account in the Accounts preferences.
+ 
+MySpace IM
+ * Added support for msim links. (#8036)
 
 Miscellaneous
  * You can now define which applications should be the default for different services in the Advanced preferences. (#158)
